--- a/apps/react-scrappy/src/app/app.module.scss
+++ b/apps/react-scrappy/src/app/app.module.scss
@@ -7,6 +7,14 @@
   h1 {
     font-size: 30px;
   }
+
+  h4 {
+    font-size: 20px;
+  }
+
+  h1, h4, p, span, small {
+    text-transform: capitalize;
+  }
 }
 
 
