--- a/apps/react-scrappy/src/app/app.module.scss
+++ b/apps/react-scrappy/src/app/app.module.scss
@@ -1,5 +1,5 @@
 .app {
-  font-family: sans-serif;
+  font-family: 'Quicksand', sans-serif;
   min-width: 300px;
   max-width: 600px;
   margin: 50px auto;
@@ -12,19 +12,34 @@
     font-size: 20px;
   }
 
-  h1, h4, span, small {
+  h1,
+  h4,
+  span,
+  small {
     text-transform: capitalize;
   }
 
   p {
     letter-spacing: 0.5px;
-    font-size: 13px;
+    font-size: 14px;
   }
 }
 
-
 .app :global(.logo) {
-    height: 50px;
-    margin-right: 10px;
-    margin-top: -5px;
+  height: 50px;
+  margin-right: 10px;
+  margin-top: -5px;
+}
+
+.app :global(.scrolling-wrapper) {
+  overflow-x: auto;
+
+  &::-webkit-scrollbar {
+    display: none; /* Safari and Chrome */
+  }
+}
+
+.app :global(.lang-card) {
+  min-width: 100%;
+
 }
