feat: add service to query firestore

--- a/apps/ng-scrappy/src/app/app.component.html
+++ b/apps/ng-scrappy/src/app/app.component.html
@@ -1,8 +1,12 @@
+<active-lang-selector></active-lang-selector>
+
+
 <header className="mb-4">
     <div className="d-flex justify-content-center align-items-center">
       <img className="logo" src='../assets/images/logo.png' alt="logo" />
       <h1 className="text-warning"> Scrappy Dictionary </h1>
     </div>
+
 </header>
 <main>
   <router-outlet></router-outlet>
