--- a/apps/ng-scrappy/src/app/components/translation-list/translation-list.component.html
+++ b/apps/ng-scrappy/src/app/components/translation-list/translation-list.component.html
@@ -1,3 +1,12 @@
-<div *ngFor="let trl of (translations$ | async)" class="card">
-  <app-translation-overview [trl]="trl"></app-translation-overview>
+<div class="content" scrollable (scrollPosition)="scrollHandler($event)">
+  <div *ngFor="let trl of (trlData$ | async).trlData">
+    <app-translation-overview [trl]="trl"></app-translation-overview>
+  </div>
+
+  <div class="d-flex justify-content-center">
+      <div *ngFor="let x of spinnerCount"  class="m-2 spinner-grow spinner-grow-sm text-dark" role="status">
+        <span class="sr-only">Loading...</span>
+      </div>
+  </div>
+
 </div>
