feat: add 'vote-for-language-to-add' feature

--- a/apps/ng-scrappy/src/app/components/home/home.component.html
+++ b/apps/ng-scrappy/src/app/components/home/home.component.html
@@ -46,4 +46,8 @@
           <app-language *ngFor="let lang of supportedLangs$ | async" [lang]="lang"></app-language>
     </div>
   </div>
+
+  <div class="jumbotron bg-light border-secondary pt-4 pb-5">
+    <app-vote-card></app-vote-card>
+  </div>
 </div>
