feat: improve angular app general stling

--- a/apps/ng-scrappy/src/app/app.component.html
+++ b/apps/ng-scrappy/src/app/app.component.html
@@ -3,15 +3,16 @@
   <header  class="mb-4 mt-0">
     <active-lang-selector></active-lang-selector>
 
-      <a [routerLink]="['/', (activeLang$ | async)]" class="d-flex justify-content-center align-items-center">
+      <a [routerLink]="['/', (activeLang$ | async)]" class="mt-1 d-flex justify-content-center align-items-center">
         <img class="logo" src='../assets/images/logo.png' alt="logo" />
         <h1 class="text-warning"> Scrappy Dictionary </h1>
       </a>
+
       <app-search></app-search>
+
   </header>
-
-  <main>
-    <router-outlet></router-outlet>
-  </main>
-
 </div>
+
+<main>
+  <router-outlet></router-outlet>
+</main>
