--- a/apps/ng-scrappy/src/app/components/home/home.component.html
+++ b/apps/ng-scrappy/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="lang$ | async as lang">
+<div *ngIf="lang$ | async as lang" class="home m-auto">
 
   <div class="card bg-light border-warning m-2">
     <span class="card-header text-warning">
