--- a/apps/ng-scrappy/src/app/components/home/popular/popular.component.html
+++ b/apps/ng-scrappy/src/app/components/home/popular/popular.component.html
@@ -1,5 +1,5 @@
 <div class="m-3 mb-0">
     <button [routerLink]="['/', language, 'words', word]" class="btn btn-outline-warning nowrap">
-      {{ word }}
+      {{ word | titlecase }}
     </button>
 </div>
