--- a/apps/ng-scrappy/src/app/components/translation-detail/translation-detail.component.html
+++ b/apps/ng-scrappy/src/app/components/translation-detail/translation-detail.component.html
@@ -1,53 +1,56 @@
-<div *ngIf="trlData$ | async as trl" class="m-2 pb-3 card bg-light">
-  <div class="card-header pb-0 d-flex justify-content-between">
-    <p class="text-secondary">
-      Translation
-    </p>
-    <a [routerLink]="['/', trl.language, 'words']">
-      <span class="badge badge-warning">{{ trl.language }}</span>
-    </a>
-  </div>
-  <div class="card-body">
-    <h2 class="card-title">
-      {{ trl.word }}
-    </h2>
-    <p class="card-text">
-      {{ trl.meaning ? trl.meaning : "😬 Meaning wasn't provided" }}
-    </p>
-  </div>
-
-  <hr />
-
-  <div class="card-body mb-0">
-    <p class="text-muted">
-      Example
-    </p>
-    <p>
-      {{ trl.example ? trl.example : "😞 No example available." }}
-    </p>
-
-    <p class="text-muted">
-      Translated to...
-    </p>
-
-    <p>
-      {{ trl.translation ? trl.translation : "😞 The translation wasn't provided." }}
-    </p>
-  </div>
-
-  <hr />
-
-  <div class="card m-3 bg-light border-secondary">
-    <p class="text-secondary p-2 mb-0">
-      Related Words
-    </p>
-
-    <div *ngFor="let related of trl.relatedWords" class="list-group list-group-flush m-0 p-0">
-      <a [routerLink]="['/', trl.language, 'words', related]">
-        <u class="list-group-item pl-2 text-dark">
-          {{ related }}
-        </u>
+<div class="wrapper m-auto">
+  <div *ngIf="trlData$ | async as trl" class="m-2 pb-3 card bg-light">
+    <div class="card-header pb-0 d-flex justify-content-between">
+      <p class="text-secondary">
+        Translation
+      </p>
+      <a [routerLink]="['/', trl.language, 'words']">
+        <span class="badge badge-warning">{{ trl.language | titlecase }}</span>
       </a>
     </div>
+    <div class="card-body">
+      <h2 class="card-title">
+        {{ trl.word | titlecase }}
+      </h2>
+      <p class="card-text">
+        {{ trl.meaning ? trl.meaning : "😬 Meaning wasn't provided" }}
+      </p>
+    </div>
+
+    <hr />
+
+    <div class="card-body mb-0">
+      <p class="text-muted">
+        Example
+      </p>
+      <p>
+        {{ trl.example ? (trl.example | titlecase) : "😞 No example available." }}
+      </p>
+
+      <p class="text-muted">
+        Translated to...
+      </p>
+
+      <p>
+        {{ trl.translation ? (trl.translation | titlecase) : "😞 The translation wasn't provided." }}
+      </p>
+    </div>
+
+    <hr />
+
+    <div class="card m-3 bg-light border-secondary">
+      <p class="text-secondary p-2 mb-0">
+        Related Words
+      </p>
+
+      <div *ngFor="let related of trl.relatedWords" class="list-group list-group-flush m-0 p-0">
+        <a [routerLink]="['/', trl.language, 'words', related]">
+          <u class="list-group-item pl-2 text-dark">
+            {{ related | titlecase }}
+          </u>
+        </a>
+      </div>
+    </div>
   </div>
+
 </div>
