--- a/apps/ng-scrappy/src/app/components/translation-list/translation-list.component.html
+++ b/apps/ng-scrappy/src/app/components/translation-list/translation-list.component.html
@@ -1,5 +1,6 @@
-<div class="content" scrollable (scrollPosition)="scrollHandler($event)">
-  <div *ngFor="let trl of (trlData$ | async).trlData">
+<div class="wrapper d-flex justify-content-center" scrollable (scrollPosition)="scrollHandler($event)">
+ <div class="w-100" >
+  <div class="list m-auto" *ngFor="let trl of (trlData$ | async).trlData">
     <app-translation-overview [trl]="trl"></app-translation-overview>
   </div>
 
@@ -8,5 +9,6 @@
         <span class="sr-only">Loading...</span>
       </div>
   </div>
+ </div>
 
 </div>
