--- a/apps/ng-scrappy/src/app/components/translation-list/translation-list.component.scss
+++ b/apps/ng-scrappy/src/app/components/translation-list/translation-list.component.scss
@@ -1,4 +1,11 @@
-.content {
-    height: calc(100vh - 150px);
-    overflow-y: scroll;
+
+.wrapper {
+  height: calc(100vh - 180px);
+  overflow-y: scroll;
 }
+
+.list {
+  min-width: 300px !important;
+  max-width: 600px !important;
+}
+
