--- a/apps/ng-scrappy/src/styles.scss
+++ b/apps/ng-scrappy/src/styles.scss
@@ -1,3 +1,24 @@
+* {
+  font-family: 'Quicksand', sans-serif;
+  scrollbar-width: thin;
+  scrollbar-color: #333 transparent;
+}
+
+/* Works on Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+  width: 2px;
+}
+
+*::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #333;
+  border-radius: 20px;
+  border: 3px solid transparent;
+}
+
 h1 {
   font-size: 30px;
 }
@@ -18,12 +39,16 @@ p {
   font-size: 14px;
 }
 
+.btn {
+  white-space: nowrap !important;
+}
+
 .app {
-  font-family: 'Quicksand', sans-serif;
   min-width: 300px;
   max-width: 600px;
-  margin: 20px auto;
+  margin: 0px auto;
   position: relative;
+
 
   .logo {
     height: 40px;
@@ -41,7 +66,16 @@ p {
   }
 }
 
+app-language {
+  min-width: 100%;
+}
 
-.btn {
-  white-space: nowrap !important;
+
+.lang-card {
+  .card-body {
+    height: 180px;
+    @media only screen and (max-width: 600px) {
+      height: 280px;
+    }
+  }
 }
