--- a/apps/ng-scrappy/src/app/components/home/language/language.component.html
+++ b/apps/ng-scrappy/src/app/components/home/language/language.component.html
@@ -8,10 +8,14 @@
         {{ lang.description }}
       </p>
     </div>
-    <div class="card-footer">
+    <div class="card-footer d-flex justify-content-between align-items-center">
           <button [routerLink]="['/', lang.language, 'words']" class="btn btn-outline-warning">
             Open dictionary
           </button>
+
+          <small class="text-muted">
+            {{ lang.wordCount }} Words
+          </small>
     </div>
   </div>
 </div>
