--- a/apps/ng-scrappy/src/app/components/search/search.component.html
+++ b/apps/ng-scrappy/src/app/components/search/search.component.html
@@ -1,10 +1,10 @@
 <div class="search-box">
-  <ais-instantsearch [config]="algoliaConfig">
+  <ais-instantsearch [config]="config">
 
     <ais-search-box class="search-box"  placeholder="Search word"></ais-search-box>
     <ais-hits>
       <ng-template let-hits="hits" let-results="results">
-        <div *ngIf="results.query">
+        <div *ngIf="results?.query">
           <div *ngFor="let hit of hits" class="content">
             <a (click)="goTo(hit)" class="list-group-item d-flex justify-content-between align-items-center">
               <span class="text-white">{{ hit.word }}</span>
